fix up header and footer spacing in viewbox

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,19 @@
 nav ul, footer ul {
-  display: flex;
+  display: flex; 
   justify-content: space-between;
   list-style-type: none;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
   max-width: 610.5px;
 }
 
 @media only screen and (min-device-width: 1200px) {
   body {
     font-family: monospace;
-    max-width: 640px; /* Approximation for 80 characters per line, assuming 8px per character */
+    max-width: 610.5px;
+    margin-bottom: 0px;
     padding: 10px;
+    padding-bottom: 0px;
     background-color: #ffffff;
     color: #000;
     white-space: pre-wrap; /* Allows text to wrap and preserve formatting */
